# laserSystemUSE

./: README.md
laserSystemClient/: README.txt
laserSystemClient/laserSystemClientClass/: lasersystemclient.cpp  lasersystemclient.h
laserSystemServerUSE/: CMakeLists.txt
laserSystemServerUSE/src/: main.cpp
laserSystemServerUSE/src/class_leica/: geocom_class_leica.cpp  geocom_class_leica.h
laserSystemServerUSE/src/class_leica/QtcpSocket/: mytcpclient.cpp
laserSystemServerUSE/src/class_leica/udpSocket/: myudpServer.cpp  myudpServer.h
